Fix off-by-1 in BrushHud Deform Modes combobox

The DeformModes enum starts at 1, the combobox indices start at 0,
account for this in the read-write of the combobox
which is shown in the On-Canvas Brush Editor.

BUG:509741


(cherry picked from commit 93c283a335f3aaa2dfa33643e4a8e0739263af35)

Co-authored-by: Freya Lupen <penguinflyer2222@gmail.com>